style: update for all

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1>术语检索</h1>
+    <h1 class="h1-sm">术语检索</h1>
     <div class="page-note">
       <p>本页可以检索二字码、三字码、术语、各种专用英文词汇等。 <br />
       如果有任何的词库扩展建议，请
@@ -15,22 +15,22 @@
 
     <!-- narrow column -->
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
-      <h2>筛选</h2>
+      <h2 class="h2-sm">筛选</h2>
 
       <!-- 筛选 指定码精确查找 -->
       <label for="searchbox">根据关键字检索</label>
-      <input class="form-control" type="text" id="searchbox" ng-model="speciCode">
+      <input class="form-control margin-bottom" type="text" id="searchbox" ng-model="speciCode">
 
       <!-- 筛选 模糊关键字 -->
       <label for="searchbox">模糊检索</label>
-      <input class="form-control" type="text" id="searchbox" ng-model="query">
+      <input class="form-control margin-bottom" type="text" id="searchbox" ng-model="query">
 
     </div>  <!-- end narrow column -->
 
     <!-- wide column -->
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2>检索结果</h2>
+      <h2 class="h2-sm">检索结果</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
