style: add bottom border for h1

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -1,10 +1,13 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm">术语检索</h1>
+    <h1 class="h1-sm"><span class="border-bottom-thick">术语检索</span></h1>
     <div class="page-note">
       <p>本页可以检索二字码、三字码、术语、各种专用英文词汇等。 <br />
       如果有任何的词库扩展建议，请
-      <a href="mailto:churui.ctecdcs.net">发内邮联系我</a>。谢谢。
+      <a href="mailto:churui.ctecdcs.net">
+        通过内邮告知 <span class="glyphicon glyphicon-new-window"></span>
+      </a>
+      。谢谢。
       </p>
     </div>
   </div>
