--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm">五组标准化文档查询</h1>
+    <h1 class="h1-sm"><span class="border-bottom-thick">五组标准化文档查询</span></h1>
   </div>
 </div>
 
