--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm">专设设备查询</h1>
+    <h1 class="h1-sm"><span class="border-bottom-thick">专设设备查询</span></h1>
   </div>
 </div>
 
