--- a/app/view-reactor_trip/reactor_trip.html
+++ b/app/view-reactor_trip/reactor_trip.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm">传感器、阈值与停堆功能</h1>
+    <h1 class="h1-sm"><span class="border-bottom-thick">传感器、阈值与停堆功能</span></h1>
   </div>
 </div>
 
