style: update style for h2

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -2,7 +2,7 @@
   <div class="row">
     <h1 class="h1-sm"><span class="border-bottom-thick">术语检索</span></h1>
     <div class="page-note">
-      <p>本页可以检索二字码、三字码、术语、各种专用英文词汇等。 <br />
+      <p>本页可以检索二字码、三字码，以及各种核电专用词汇等。 <br />
       如果有任何的词库扩展建议，请
       <a href="mailto:churui.ctecdcs.net">
         通过内邮告知 <span class="glyphicon glyphicon-new-window"></span>
@@ -18,7 +18,7 @@
 
     <!-- narrow column -->
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
-      <h2 class="h2-sm">筛选</h2>
+      <h2 class="h2">筛选</h2>
 
       <!-- 筛选 指定码精确查找 -->
       <label for="searchbox">根据关键字检索</label>
@@ -33,7 +33,7 @@
     <!-- wide column -->
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2 class="h2-sm">检索结果</h2>
+      <h2 class="h2">检索结果</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
