--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -8,7 +8,7 @@
   <div class="row">
 
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
-      <h2 class="h2-sm">筛选</h2>
+      <h2 class="h2">筛选</h2>
 
       <!-- 筛选1 选择适用平台 -->
       <label>选择适用平台</label>
@@ -29,7 +29,7 @@
 
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2 class="h2-sm">查询结果：<span ng-bind="filteredItems.length"></span>条 | 总记录 <span ng-bind="compCtrl.items.length"></span>条</h2>
+      <h2 class="h2">查询结果：<span ng-bind="filteredItems.length"></span>条 | 总记录 <span ng-bind="compCtrl.items.length"></span>条</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
