--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -9,7 +9,7 @@
 
       <!-- narrow column -->
       <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
-        <h2 class="h2-sm">筛选</h2>
+        <h2 class="h2">筛选</h2>
 
         <!-- 筛选1 选择适用文件 -->
         <label>选择适用平台</label>
@@ -35,7 +35,7 @@
         <label for="searchbox">关键字查询</label>
         <input class="form-control" type="text" id="searchbox" ng-model="query">
 
-        <h2 class="h2-sm">常用关键字</h2>
+        <h2 class="h2">常用关键字</h2>
 
         <div class="side-keyword">
           <ul class="styled-list">
@@ -52,7 +52,7 @@
       <!-- wide column -->
       <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-        <h2 class="h2-sm">查询结果：<span ng-bind="filteredItems.length"></span>条 | 总记录 <span ng-bind="docq.items.length"></span>条</h2>
+        <h2 class="h2">查询结果：<span ng-bind="filteredItems.length"></span>条 | 总记录 <span ng-bind="docq.items.length"></span>条</h2>
         <table class="table table-bordered table-hover table-striped">
           <thead>
             <tr>
