--- a/app/view-reactor_trip/reactor_trip.html
+++ b/app/view-reactor_trip/reactor_trip.html
@@ -10,7 +10,7 @@
     <!-- narrow column -->
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
 
-      <h2 class="h2-sm">筛选</h2>
+      <h2 class="h2">筛选</h2>
 
       <!-- 功能筛选1 check box for safety injection filtering-->
       <div class="row no-margin-left">
@@ -32,7 +32,7 @@
     <!-- wide column -->
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2 class="h2-sm">查询结果: <span ng-bind="filteredItems.length"></span>条 |
+      <h2 class="h2">查询结果: <span ng-bind="filteredItems.length"></span>条 |
         总记录 <span ng-bind="rtCtrl.items.length"></span>条</h2>
 
       <table class="table table-bordered table-hover table-striped">
