--- a/app/view-tools/tools.html
+++ b/app/view-tools/tools.html
@@ -19,7 +19,7 @@
     <!-- narrow column -->
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
 
-      <h2 class="h2-sm">筛选</h2>
+      <h2 class="h2">筛选</h2>
 
       <!-- 筛选1 选择适用文件 -->
         <label>选择适用平台</label>
@@ -36,7 +36,7 @@
     <!-- wide column -->
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
-      <h2 class="h2-sm">检索结果</h2>
+      <h2 class="h2">检索结果</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
