style: change many styles

--- a/app/view-main/main.html
+++ b/app/view-main/main.html
@@ -1,36 +1,52 @@
 <div class="jumbotron">
   <h1>使信息相互关联，让资源垂手可得</h1>
   
-  
   <div class="container">
-    <div class="flex-box">
-      <div class="float-elem">
-        <h1>T</h1>
-        <span>Together</span>
-      </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
 
-      <div class="float-elem">
-        <h1>E</h1>
-        <span>Everything</span>
-      </div>
+        <div class="flex-box">
+          <div class="float-elem">
+            <h1>
+              <span class="glyphicon glyphicon-chevron-left"></span>
+            </h1>
+          </div>
 
-      <div class="float-elem">
-        <h1>A</h1>
-        <span>Achieve</span>
-      </div>
+          <div class="float-elem">
+            <h1>T</h1>
+            <span>Together</span>
+          </div>
 
-      <div class="float-elem">
-        <h1>M</h1>
-        <span>More</span>
-      </div>
-    </div>
-  </div>
-  
+          <div class="float-elem">
+            <h1>E</h1>
+            <span>Everything</span>
+          </div>
+
+          <div class="float-elem">
+            <h1>A</h1>
+            <span>Achieve</span>
+          </div>
+
+          <div class="float-elem">
+            <h1>M</h1>
+            <span>More</span>
+          </div>
+
+          <div class="float-elem">
+            <h1>
+              <span class="glyphicon glyphicon-chevron-right"></span>
+            </h1>
+          </div>
+
+        </div>
+      </div>  <!-- col-*-* family -->
+    </div>  <!-- row -->
+  </div>  <!-- container -->
   
   <div class="margin-top-md">
-    <a class="btn btn-primary btn-lg" href="#/howto">
+    <a class="btn btn-link btn-lg" href="#/howto">
       查看如何使用 <span class="glyphicon glyphicon-info-sign"></span>
     </a>
   </div>
-</div>
 
+</div>  <!-- jumbotron -->
