--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm"><span class="border-bottom-thick">术语检索</span></h1>
+    <h1 class="h1">
+      <span class="glyphicon glyphicon-th-large"></span>
+      <span class="border-bottom-thick">术语检索</span>
+    </h1>
     <div class="page-note">
       <p>本页可以检索二字码、三字码，以及各种核电专用词汇等。 <br />
       如果有任何的词库扩展建议，请
