--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -1,6 +1,9 @@
 <div class="container">
   <div class="row">
-    <h1 class="h1-sm"><span class="border-bottom-thick">平台硬件信息</span></h1>
+    <h1 class="h1">
+      <span class="glyphicon glyphicon-th-large"></span>
+      <span class="border-bottom-thick">平台硬件信息</span>
+    </h1>
   </div>
 </div>
 
