style: optimize form elements' style

--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -24,12 +24,16 @@
       <h2 class="h2">筛选</h2>
 
       <!-- 筛选 指定码精确查找 -->
-      <label for="searchbox">根据关键字检索</label>
-      <input class="form-control margin-bottom" type="text" id="searchbox" ng-model="speciCode">
+      <div class="form-group">
+        <label for="searchbox">根据关键字检索</label>
+        <input class="form-control input-sm margin-bottom" type="text" id="searchbox" ng-model="speciCode">
+      </div>
 
       <!-- 筛选 模糊关键字 -->
-      <label for="searchbox">模糊检索</label>
-      <input class="form-control margin-bottom" type="text" id="searchbox" ng-model="query">
+      <div class="form-group">
+        <label for="searchbox">模糊检索</label>
+        <input class="form-control input-sm margin-bottom" type="text" id="searchbox" ng-model="query">
+      </div>
 
     </div>  <!-- end narrow column -->
 
