--- a/app/view-equipment-q/equipment-query.html
+++ b/app/view-equipment-q/equipment-query.html
@@ -17,7 +17,7 @@
 
       <!-- 功能筛选1 check box for safety injection filtering-->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="si-check-box"
         ng-model="siChecked"
         ng-true-value="'siChecked'"
@@ -27,7 +27,7 @@
 
       <!-- 功能筛选2 check box for containment spray filtering -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="cs-check-box"
         ng-model="csChecked"
         ng-true-value="'csChecked'"
@@ -37,7 +37,7 @@
 
       <!-- 功能筛选 check box for CIA filtering -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="cia-check-box"
         ng-model="ciaChecked"
         ng-true-value="'ciaChecked'"
@@ -47,7 +47,7 @@
 
       <!-- 功能筛选 check box for CIB filtering -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="cib-check-box"
         ng-model="cibChecked"
         ng-true-value="'cibChecked'"
@@ -57,7 +57,7 @@
 
       <!-- 功能筛选 check box for Trian A filtering -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="train-a-check-box"
         ng-model="trainAChecked"
         ng-true-value="'trainAChecked'"
@@ -67,7 +67,7 @@
 
       <!-- 功能筛选 check box for Trian B filtering -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="train-b-check-box"
         ng-model="trainBChecked"
         ng-true-value="'trainBChecked'"
@@ -78,14 +78,14 @@
       <!-- 功能筛选 模糊关键字 -->
       <div class="row no-margin-left">
         <label for="searchbox">使用模糊关键字</label>
-        <input type="text" class="form-contorl margin-bttom" id="searchbox" ng-model="query">
+        <input type="text" class="form-control input-sm margin-bttom" id="searchbox" ng-model="query">
       </div>
 
       <h2 class="h2 no-margin-bottom">排序</h2>
       <p>默认按机柜号排序</p>
 
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="sort_by_local_sys"
         ng-model="sortByLocalSys"
         ng-true-value="'local_sys'"
@@ -94,7 +94,7 @@
       </div>
 
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="sort_by_category"
         ng-model="sortByCategory"
         ng-true-value="'category'"
@@ -108,7 +108,7 @@
 
       <!-- check box for dcs column show / hide -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         name="description-col-show"
         ng-model="equipCtrl.columnShow.function_description"
         ng-true-value="true"
@@ -118,7 +118,7 @@
 
       <!-- check box for LD index column show / hide -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         ng-model="equipCtrl.columnShow.ld_index"
         ng-true-value="true"
         ng-false-value="false">
@@ -127,7 +127,7 @@
 
       <!-- check box for local System column show / hide -->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bttom"
+        <input type="checkbox" class="margin-bttom"
         ng-model="equipCtrl.columnShow.sd_index"
         ng-true-value="true"
         ng-false-value="false">
