--- a/app/view-reactor_trip/reactor_trip.html
+++ b/app/view-reactor_trip/reactor_trip.html
@@ -17,7 +17,7 @@
 
       <!-- 功能筛选1 check box for safety injection filtering-->
       <div class="row no-margin-left">
-        <input type="checkbox" class="form-contorl margin-bottom"
+        <input type="checkbox" class="margin-bottom"
         name="reserved-checkbox"
         ng-model=""
         ng-true-value="''"
@@ -27,7 +27,7 @@
 
       <!-- 功能筛选 模糊关键字 -->
       <label for="searchbox">使用模糊关键字</label>
-      <input type="text" class="form-control margin-bottom" id="searchbox" ng-model="query">
+      <input type="text" class="form-control input-sm margin-bottom" id="searchbox" ng-model="query">
 
 
     </div>   <!-- narrow column -->
