--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -10,34 +10,44 @@
 <div class="container">
   <div class="row">
 
+
+    <!-- narrow column -->
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2 no-padding-left">
       <h2 class="h2">筛选</h2>
 
       <!-- 筛选1 选择适用平台 -->
-      <label>选择适用平台</label>
-      <select class="form-control margin-bottom" ng-model="compCtrl.selectedPlatform"
-        ng-options="c.platform as c.platform for c in compCtrl.selectOptions['platform']">
-      </select>
+      <div class="form-group">
+        <label>选择适用平台</label>
+        <select class="form-control input-sm margin-bottom" ng-model="compCtrl.selectedPlatform"
+          ng-options="c.platform as c.platform for c in compCtrl.selectOptions['platform']">
+        </select>
+      </div>
 
       <!-- 筛选1 选择硬件类型 -->
-      <label>选择常用类型</label>
-      <select class="form-control margin-bottom" ng-model="compCtrl.selectedName"
-        ng-options="c.name as c.name for c in compCtrl.selectOptions['name']">
-      </select>
+      <div class="form-group">
+        <label>选择常用类型</label>
+        <select class="form-control input-sm margin-bottom" ng-model="compCtrl.selectedName"
+          ng-options="c.name as c.name for c in compCtrl.selectOptions['name']">
+        </select>
+      </div>
 
       <!-- 筛选 模糊关键字 -->
-      <label for="searchbox">使用模糊关键字</label>
-      <input class="form-control" type="text" id="searchbox" ng-model="query">
+      <div class="form-group">
+        <label for="searchbox">使用模糊关键字</label>
+        <input class="form-control input-sm" type="text" id="searchbox" ng-model="query">
+      </div>
     </div>  <!-- narrow column -->
 
+
+    <!-- wide column -->
     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
 
       <h2 class="h2">查询结果：<span ng-bind="filteredItems.length"></span>条 | 总记录 <span ng-bind="compCtrl.items.length"></span>条</h2>
       <table class="table table-bordered table-hover table-striped">
         <thead>
           <tr>
-            <th scope="col">型号</th>
-            <th scope="col">类型</th>
+            <th scope="col" class="text-nowrap">型号</th>
+            <th scope="col" class="text-nowrap">类型</th>
             <th scope="col">功能</th>
             <th scope="col">规格</th>
             <th scope="col">平台</th>
@@ -50,7 +60,7 @@
           filter: compCtrl.hardCodeFilter[compCtrl.selectedName] |
           filter: query)">
 
-          <td>{{item.module}}</td>
+          <td class="text-nowrap">{{item.module}}</td>
           <td>{{item.name}}</td>
           <td>{{item.feature}}</td>
           <td>{{item.specification}}</td>
