--- a/app/view-doc-q/doc-q.html
+++ b/app/view-doc-q/doc-q.html
@@ -15,28 +15,36 @@
         <h2 class="h2">筛选</h2>
 
         <!-- 筛选1 选择适用文件 -->
-        <label>选择适用平台</label>
-        <select class="form-control margin-bottom" ng-model="docq.selectedPlatform"
-          ng-options="c.platform as c.platform for c in docq.selectOptions['platform']">
-        </select>
+        <div class="form-group">
+          <label>选择适用平台</label>
+          <select class="form-control input-sm margin-bottom" ng-model="docq.selectedPlatform"
+            ng-options="c.platform as c.platform for c in docq.selectOptions['platform']">
+          </select>
+        </div>
 
         <!-- 筛选2 选择适用文件 -->
-        <label>选择适用文件</label>
-        <select class="form-control margin-bottom" ng-model="docq.selectedRefDoc"
-          ng-options="c.refer_to as c.refer_to for c in docq.selectOptions['refer_to']">
-        </select>
+        <div class="form-group">
+          <label>选择适用文件</label>
+          <select class="form-control input-sm margin-bottom" ng-model="docq.selectedRefDoc"
+            ng-options="c.refer_to as c.refer_to for c in docq.selectOptions['refer_to']">
+          </select>
+        </div>
 
 
         <!-- 筛选3 选择文件类型 -->
-        <label>选择文件类型</label>
-        <select class="form-control margin-bottom" ng-model="docq.selectedDocCat"
-          ng-options="c.doc_category as c.doc_category for c in docq.selectOptions['doc_category']">
-        </select>
+        <div class="form-group">
+          <label>选择文件类型</label>
+          <select class="form-control input-sm margin-bottom" ng-model="docq.selectedDocCat"
+            ng-options="c.doc_category as c.doc_category for c in docq.selectOptions['doc_category']">
+          </select>
+        </div>
 
 
         <!-- 筛选 模糊关键字 -->
-        <label for="searchbox">关键字查询</label>
-        <input class="form-control" type="text" id="searchbox" ng-model="query">
+        <div class="form-group">
+          <label for="searchbox">关键字查询</label>
+          <input class="form-control input-sm" type="text" id="searchbox" ng-model="query">
+        </div>
 
         <h2 class="h2">常用关键字</h2>
 
