feat: add cots query view

--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
              href="">查询系统 <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
+            <li><a href="#/cots">外购物资</a></li>
             <li><a href="#/doc-q">工作文档</a></li>
             <li><a href="#/acronym">术语查询</a></li>
             <li><a href="#/tools">软件工具</a></li>
@@ -88,5 +89,6 @@
   <script src="./view-tools/tools-controller.js"></script>
   <script src="./view-reactor_trip/rt_controller.js"></script>
   <script src="./view-dcs-component/dcs-comp-controller.js"></script>
+  <script src="./view-cots/cots-controller.js"></script>
 </body>
 </html>
