style: make some change on cots view

--- a/app/index.html
+++ b/app/index.html
@@ -37,8 +37,9 @@
              href="">D.C.S <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#/dcs_component">硬件信息</a></li>
-            <li><a href="">平台维护</a></li>
+            <li><a href="#/dcs_component">平台硬件</a></li>
+            <li><a href="#/cots">外购物资</a></li>
+            <!-- <li><a href="">平台维护</a></li> -->
           </ul>
         </li>
 
@@ -48,7 +49,6 @@
              href="">查询系统 <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#/cots">外购物资</a></li>
             <li><a href="#/doc-q">工作文档</a></li>
             <li><a href="#/acronym">术语查询</a></li>
             <li><a href="#/tools">软件工具</a></li>
