--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -7,7 +7,7 @@
     <div class="page-note">
       <p>本页可以检索二字码、三字码，以及各种核电专用词汇等。 <br />
       如果有任何的词库扩展建议，请
-      <a href="mailto:churui.ctecdcs.net">
+      <a href="mailto:churui@ctecdcs.net">
         通过内邮告知 <span class="glyphicon glyphicon-new-window"></span>
       </a>
       。谢谢。
