style: update the glyphicon system

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,11 @@
     <div class="container-fluid">  <!-- header, bootstrap container-->
 
       <div class="navbar-header">
-          <a class="active navbar-brand" href="#/">T.E.A.M</a>
+          <a class="active navbar-brand" href="#/">
+            <span class="glyphicon glyphicon-chevron-left logo-gly"></span>
+            T.E.A.M
+            <span class="glyphicon glyphicon-chevron-right logo-gly"></span>
+          </a>
       </div>
 
       <ul class="nav navbar-nav">
