--- a/app/view-cots/cots.html
+++ b/app/view-cots/cots.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h1 class="h1">
-      <span class="glyphicon glyphicon-shopping-cart"></span>
+      <span class="glyphicon glyphicon-shopping-cart title-gly"></span>
       <span class="border-bottom-thick">外购物资查询 <small>Beta</small></span>
     </h1>
     <p>
