--- a/app/view-dcs-component/dcscomp.html
+++ b/app/view-dcs-component/dcscomp.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h1 class="h1">
-      <span class="glyphicon glyphicon-th-large"></span>
+      <span class="glyphicon glyphicon-cog title-gly"></span>
       <span class="border-bottom-thick">平台硬件信息</span>
     </h1>
   </div>
