--- a/app/view-main/main.html
+++ b/app/view-main/main.html
@@ -8,7 +8,7 @@
         <div class="flex-box">
           <div class="float-elem">
             <h1>
-              <span class="glyphicon glyphicon-chevron-left"></span>
+              <span class="glyphicon glyphicon-chevron-left main-gly"></span>
             </h1>
           </div>
 
@@ -34,7 +34,7 @@
 
           <div class="float-elem">
             <h1>
-              <span class="glyphicon glyphicon-chevron-right"></span>
+              <span class="glyphicon glyphicon-chevron-right main-gly"></span>
             </h1>
           </div>
 
