--- a/app/view-acronym/acronym.html
+++ b/app/view-acronym/acronym.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <h1 class="h1">
-      <span class="glyphicon glyphicon-th-large"></span>
+      <span class="glyphicon glyphicon-text-background title-gly"></span>
       <span class="border-bottom-thick">术语检索</span>
     </h1>
     <div class="page-note">
