--- a/app/view-tools/tools.html
+++ b/app/view-tools/tools.html
@@ -1,13 +1,13 @@
 <div class="container">
   <div class="row">
     <h1 class="h1">
-      <span class="glyphicon glyphicon-th-large"></span>
+      <span class="glyphicon glyphicon-briefcase title-gly"></span>
       <span class="border-bottom-thick">设计工具</span>
     </h1>
     <p>
       本页收录了由五组自行开发的设计类、效率类软件工具。且本页中的信息会随着软件升级进行同步更新。<br />
       如果你发现此处收录的软件并非最新版本，或有遗漏，敬请 
-      <a href="mailto:churui.ctecdcs.net">
+      <a href="mailto:churui@ctecdcs.net">
         通过内邮告知 <span class="glyphicon glyphicon-new-window"></span>
       </a>
       。谢谢。
