style: update cots view

--- a/app/view-cots/cots.html
+++ b/app/view-cots/cots.html
@@ -7,7 +7,7 @@
     <p>
       外购物资查询功能处于试用阶段，欢迎提供宝贵意见，或对收录数据进行补充、修正。<br />
       任何意见或建议，请
-      <a href="mailto:churui.ctecdcs.net">
+      <a href="mailto:churui@ctecdcs.net">
         通过内邮告知 <span class="glyphicon glyphicon-new-window"></span>
       </a>
       。谢谢。
@@ -69,7 +69,7 @@
           <td>{{item.status}}</td>
           <td>
             <button class="btn btn-default btn-sm" 
-                    data-toggle="modal" data-target="#detailModal">点击查看
+                    data-toggle="modal" data-target="#detailModal">查看详情
             </button>
           </td>
 
